Fix the icon alignment in the popup menu items.

--- a/style/custom.css
+++ b/style/custom.css
@@ -460,7 +460,13 @@ h3{
     color: [[setting:color3]];
 }
 
+.jsenabled .moodle-actionmenu[data-enhanced] .menu-action-text {
+	margin-left: 0.5rem;
+}
 
+.moodle-actionmenu[data-enhanced].show .menu a {
+	padding: 0.1em 1em;
+}
 
 /* Footer */
 
